--- a/ExpressApp/views/select.pug
+++ b/ExpressApp/views/select.pug
@@ -45,6 +45,7 @@ html
       width: 130px;
       }
   body
+    h1= display_name
     form(method='POST', action='/select')
       div
         img.center(src='select.png', style='width:50%')
