--- a/ExpressApp/views/index.pug
+++ b/ExpressApp/views/index.pug
@@ -162,6 +162,8 @@ html
       }
       }
   body
+    h1= message
+    
     .count-particles
       span.js-count-particles --
       |  particles
